# nanopi

./: README.md  out
app/QLauncher/qml/: main.qml
app/QLauncher/src/: launcher.cpp
app/camera/: camera.desktop
app/demo/: .gitignore  CMakeLists.txt
app/demo/image_process/: CMakeLists.txt  image_process.cc  n1-1808-rockx-drmdisp.sh  n4-1808-drmdisp.sh  n4-csi-1808-csi-3399.sh
app/demo/image_process/resource/: face_landmark.desktop  pose_finger21-pose_body.desktop  pose_finger3.desktop  ssd.desktop
app/demo/tools/: clang-format.sh
app/demo/tools/hooks/: pre-commit
app/demo/util/cmake/: version.in
app/gallery/: gallery.desktop
app/gallery/base/: basepushbutton.cpp  cmessagebox.cpp
app/gallery/main/: mainwindow.cpp
app/music/: music.desktop
app/music/main/: mainwindow.cpp
app/music/music/: musicwidgets.cpp
app/settings/: setting.desktop
app/settings/base/: qkeyboard.cpp
app/settings/hotspot/: hotspotmainwidget.cpp
app/settings/main/: main.cpp  mainwindow.cpp
app/settings/volume/: volumnwidget.cpp
app/settings/wlan/: netconnectedinfodialog.cpp  netconnectedinfodialog.h  wlanlisttable.cpp  wlanlisttable.h  wlanmainwidget.cpp  wpamanager.cpp  wpamanager.h  wpaserviceutil.h
app/video/: video.desktop
app/video/audioservice/: AudioInterfaceProvider.cpp  AudioInterfaceProvider.h  musicplayer.cpp
app/video/main/: mainwindow.cpp
app/video/video/: videowidgets.cpp
buildroot/: .gitignore  Makefile
buildroot/configs/: rockchip_puma_defconfig  rockchip_puma_recovery_defconfig  rockchip_px30_32_defconfig  rockchip_px30_64_defconfig  rockchip_px30_64_open_defconfig  rockchip_px30_robot32_defconfig  rockchip_px30_robot64_defconfig  rockchip_px30_robot64_no_gpu_defconfig  rockchip_px3se_defconfig  rockchip_rk1808_defconfig  rockchip_rk3036_defconfig  rockchip_rk3126c_defconfig  rockchip_rk3126c_recovery_defconfig  rockchip_rk3128_defconfig  rockchip_rk3128h_defconfig  rockchip_rk3229_defconfig  rockchip_rk3288_defconfig  rockchip_rk3308_32_debug_defconfig  rockchip_rk3308_32_release_defconfig  rockchip_rk3308_b_32_release_defconfig  rockchip_rk3308_b_release_defconfig  rockchip_rk3308_gk_32_release_defconfig  rockchip_rk3308_release_defconfig  rockchip_rk3308_robot32_defconfig  rockchip_rk3308_robot64_defconfig  rockchip_rk3326_32_defconfig  rockchip_rk3326_64_defconfig  rockchip_rk3326_64_open_defconfig  rockchip_rk3326_robot32_defconfig  rockchip_rk3326_robot64_defconfig  rockchip_rk3326_robot64_no_gpu_defconfig  rockchip_rk3328_defconfig  rockchip_rk3399_defconfig  rockchip_rk3399pro-npu-multi-cam_defconfig  rockchip_rk3399pro-npu_defconfig  rockchip_rk3399pro_defconfig  rockchip_rk3399pro_recovery_defconfig  rockchip_rv1108_defconfig
buildroot/configs/rockchip/: base.config  camera_gst.config  debug.config  freerdp.config  gpu.config  ntfs.config  puma_arm.config  qt_app.config  rk3126c_arm.config  rv1108_arm.config  video_gst.config
buildroot/fs/ext2/: ext2.mk
buildroot/package/: Config.in  Config.in.host  Makefile.in  pkg-generic.mk
buildroot/package/cups/: cups.mk
buildroot/package/eigen/: eigen.mk
buildroot/package/ffmpeg/: ffmpeg.mk
buildroot/package/gcc/: Config.in.host  gcc.hash
buildroot/package/ghostscript/: ghostscript.mk
buildroot/package/glibc/: glibc.hash
buildroot/package/input-event-daemon/: 0002-Support-parsing-configfile-.d-.conf.patch
buildroot/package/mesa3d/: Config.in  mesa3d.mk
buildroot/package/ntp/: S49ntp  ntp.mk  watch_ntpd.sh
buildroot/package/opencv3/: opencv3.mk
buildroot/package/retroarch/: Config.in
buildroot/package/rockchip/: Config.in
buildroot/package/sdl2/: 0104-force-connector-id-if-env-setup.patch
buildroot/package/valgrind/: valgrind.mk
buildroot/package/weston/: 0004-xdg-shell-v6-Support-setting-window-position.patch  0005-compositor-Re-build-view-list-when-committing-an-una.patch  0006-compositor-Support-freezing-display.patch  0007-linux-dmabuf-send-deprecated-format-events.patch  0008-gl-renderer-Workaround-dmabuf-import-attach-for-mali.patch  0009-compositor-drm-Use-ARGB-as-default-gbm-format.patch  0010-compositor-drm-egl-Use-XRGB-as-ARGB-s-fallback-forma.patch  0011-compositor-drm-Create-gl-render-with-alpha-support.patch  0012-HACK-compositor-gl-renderer-Make-holes-for-lower-ove.patch  0013-compositor-drm-Support-perfer-external-connectors.patch  0014-compositor-drm-Support-virtual-screen-size.patch  0015-compositor-drm-Support-mirror-mode.patch  0016-dmabuf-set-modifier-to-invalid-for-not-supporting-cl.patch
device/rockchip/common/: build.sh
device/rockchip/rk3399/: BoardConfig.mk
distro/: .gitignore  Config.in  Makefile  envsetup.sh  make.sh
distro/configs/: default_defconfig  rk3326_defconfig  rk3399_defconfig
distro/configs/rockchip/: audio.config  base.config  base.install  camera.config  debug.install  ff_audio.config  gpu.config  graphics.config  gst_audio.config  gst_camera.config  gst_video.config  qtapp.config  qtapp.install  video.config  wifi.config
distro/overlay/etc/: hostname
distro/package/: Config.in
distro/package/QLauncher/: Config.in  S50launcher  make.sh
distro/package/alsa-config/: Config.in  make.sh
distro/package/audioservice/: Config.in  make.sh
distro/package/busybox/: Config.in  busybox.config  inittab  make.sh
distro/package/camera/: Config.in  make.sh
distro/package/camera_engine_rkisp/: make.sh
distro/package/ffmpeg/: Config.in  make.sh
distro/package/gallery/: Config.in  make.sh
distro/package/glmark2/: Config.in  make.sh
distro/package/gst-plugins-bad/: Config.in  make.sh
distro/package/gstreamer/: Config.in  (+1 more)
distro/scripts/: build_pkgs.sh  chmount.sh  config_init.sh  defconfig_hook.py  env_chroot.sh  expand_install.sh  fix_link.sh  fixlibtool.sh  get_distro.sh  get_mirror.sh  get_ubuntu_base.sh  install.sh  install_debian_pkg.sh  install_ubuntu_pkg.sh  multistrap_build.sh  override_deb.sh
kernel/: Makefile
kernel/scripts/: resource_tool.c
rootfs/: .gitignore  mk-base-debian.sh  mk-image.sh  mk-rootfs-buster.sh  mk-rootfs-stretch-arm64.sh  mk-rootfs-stretch.sh  readme.md
yocto/: README.md
(+314 files in other folders)
